# Cosmic-Astro-App

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  reports.db  requirements.txt
backend/app/: db.py  engine.py  main.py  schemas.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.js  App.js.map  App.tsx  index.css  main.js.map
